# vaultwarden-cli

./: .env.live-e2e.example  .gitignore  AGENT_GUIDE.md  Cargo.toml  LLM_INSTRUCTIONS.md  README.md  deny.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  daily-maintenance.yml  dependabot-auto-merge.yml  pr-notify-slack.yml  release.yml
docs/: live-e2e.fixture.example.json  live-e2e.md  release-checklist.md
docs/schemas/: write-error-codes.json  write-input-v1.json  write-output-v1.json
scripts/: live-e2e.sh  scan-staged-secrets.sh  security-regression.sh
src/: api.rs  commands.rs  config.rs  crypto.rs  main.rs  models.rs
tests/: agent_first_cli.rs  api_client.rs  cli.rs  command_basic.rs  live_e2e.rs  write_api_contract.rs
tests/support/: mod.rs
