[package]
name = "vaultwarden-cli"
version = "0.5.1"
edition = "2024"
description = "Agent-first Vaultwarden CLI for Linux/macOS with secure multi-tenant retrieval and write workflows"
authors = ["Haydon Ryan", "AI coders and agents"]
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
directories = "6.0"
fs2 = "0.4"
getrandom = "0.3"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
hkdf = "=0.13.0"
sha2 = "=0.11.0"
hmac = "=0.13.0"
pbkdf2 = { version = "=0.13.0-rc.10", features = ["sha2"] }
sha1 = "=0.11.0"
rpassword = "7.4"
rsa = { version = "0.10.0-rc.17", features = ["sha2"] }

[dev-dependencies]
tempfile = "3.27"
wiremock = "0.6"
tokio-test = "0.4"
rstest = "0.26"
rand = "0.10"
rand_core = "0.10"
assert_cmd = "2.2"
predicates = "3.1"


[package.metadata.release]
allow-branch = ["main", "master"]
sign-commit = false
sign-tag = false
push = true
tag = true
publish = false
tag-name = "v{{version}}"
tag-message = "release: v{{version}}"
pre-release-commit-message = "release: v{{version}}"
